Fix button-bar for mobile

--- a/src/style/bootstrap.scss
+++ b/src/style/bootstrap.scss
@@ -32,6 +32,12 @@
     .hidden-md {
       display: none !important;
     }
+
+    .btn-block-md {
+      display: block;
+      width: 100%;
+      margin: 2px 0px 2px 0;
+    }
   }
 }
 
