Fix wrapper padding

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -37,7 +37,7 @@ html,
 @media (max-width: 768px) {
   .wrapper {
     height: calc(100% - 94px) !important;
-    margin-top: 94px !important;
+    padding-top: 94px !important;
   }
 
   .page-content {
