--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -96,3 +96,18 @@ html,
   z-index: 10;
   position: fixed;
 }
+
+// Pages
+
+.feed-list {
+  hr {
+    margin-top: 2px;
+    margin-bottom: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+  }
+
+  h5 {
+    margin-bottom: 2px;
+  }
+}
