Add register, category, profile, and other things

--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -27,6 +27,8 @@ $input-bg: #212224;
 $input-group-addon-bg: #212224;
 $input-border-color: #212224;
 $input-color: white;
+$input-disabled-bg: #242527;
+$input-disabled-border-color: #242527;
 
 $input-focus-border-color: #212224;
 $input-group-addon-color: #C9D2DB;
