--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -124,3 +124,8 @@ html,
     margin-bottom: 2px;
   }
 }
+
+.react-datepicker-wrapper {
+  display: block !important;
+  width: 100% !important;
+}
