--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,3 +1,24 @@
+.sidebar {
+  background-color: #212224;
+  width: 240px;
+  min-width: 240px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: calc(100% - 56px);
+  color: #d6d6d6;
+  overflow: auto;
+  z-index: 10;
+  position: fixed;
+  transition: all 0.3s;
+}
+
+@media (max-width: 768px) {
+  .hide {
+    width: 0px;
+    min-width: 0px;
+  }
+}
+
 .navVertical {
   width: 100%;
 
